[package]
name = "nrf53-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf5340-app-pac = { version = "0.11.0", optional = true }
nrf5340-net-pac = { version = "0.11.0", optional = true }

[features]
default = ["app"]
app = ["nrf5340-app-pac"]
net = ["nrf5340-net-pac"]
